--- a/index.html
+++ b/index.html
@@ -5,30 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
     <title>Flip The Card</title>
 </head>
 
 <body>
-    <div class="flip">
-        <div class="front"
-            style="background-image: url('https://i.picsum.photos/id/1014/6016/4000.jpg?hmac=yMXsznFliL_Y2E2M-qZEsOZE1micNu8TwgNlHj7kzs8')">
-            <h1 class="text-shadow">Front</hi>
-        </div>
-        <div class="back">
-            <h2>Back</h2>
-            <p>Me moriré de ganas de decirte<br>
-                Que te voy a echar de menos<br>
-                Y las palabras se me apartan<br>
-                Me vacían las entrañas<br><br>
-
-                Finjo que no sé, que no has sabido<br>
-                Finjo que no me gusta estar contigo<br>
-                Y el perderme entre mis dedos<br>
-                Te recuerdo sin esfuerzo<br><br>
-            </p>
+    <div class="flip-card">
+        <div class="flip-card-inner">
+            <div class="flip-card-front">
+                <img src="beach.jpg" alt="beach" style="width:700px;height:500px;">
+            </div>
+            <div class="flip-card-back">
+                <h1>TV serie: Big little lies</h1>
+                <h2>Soundtrack: Cold little heart</h2>
+                <p>In my heart, in this cold heart
+                    <br>
+                    I can live or I can die
+                    <br>
+                    I believe if I just try
+                    <br>
+                    You believe in you and I</p>
+            </div>
         </div>
     </div>
-
 </body>
 
 </html>
