--- a/index.html
+++ b/index.html
@@ -6,25 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <title>Flip The Card</title>
 </head>
 
 <body>
+    <embed src="clh.mp3" autostart="true" loop="infinite" volume="80" width="0" height="0">
+    <h1>¿Adivinas la serie?</h1>
     <div class="flip-card">
         <div class="flip-card-inner">
             <div class="flip-card-front">
-                <img src="beach.jpg" alt="beach" style="width:700px;height:500px;">
+                <img src="img/beach.jpg" alt="beach" style="width:700px;height:500px;">
             </div>
             <div class="flip-card-back">
-                <h1>TV serie: Big little lies</h1>
-                <h2>Soundtrack: Cold little heart</h2>
+                <h2>TV serie: Big little lies</h2>
+                <h3>Soundtrack: Cold little heart</h3>
                 <p>In my heart, in this cold heart
                     <br>
                     I can live or I can die
                     <br>
                     I believe if I just try
                     <br>
-                    You believe in you and I</p>
+                    You believe in you and I
+                </p>
             </div>
         </div>
     </div>
