--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <embed src="clh.mp3" autostart="true" loop="infinite" volume="80" width="0" height="0">
+    <embed src="clh.mp3" autostart="true" loop="true" volume="80" width="0" height="0">
     <h1>¿Adivinas la serie?</h1>
     <div class="flip-card">
         <div class="flip-card-inner">
@@ -21,7 +21,7 @@
                 <img src="img/beach.jpg" alt="beach" style="width:700px;height:500px;">
             </div>
             <div class="flip-card-back">
-                <h2>TV serie: Big little lies</h2>
+                <h2>TV serie: Big Little Lies</h2>
                 <h3>Soundtrack: Cold little heart</h3>
                 <p>In my heart, in this cold heart
                     <br>
